--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,8 @@ header {
     background-color: lightblue;
     color: white;
     border-radius: 5px;
+    margin: auto;
+    width: 75%;
 }
 
 header img {
