--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,10 @@ body {
     height: auto;
     width: 75%;
     background-color: white;
+    margin: auto;
 }
 
-h p i {
+p i {
     color: grey;
 }
 
@@ -19,10 +20,13 @@ header {
     background-color: lightblue;
     color: white;
     border-radius: 5px;
+    margin-top: 1em;
 }
 
 header img {
     box-shadow: 2px 2px 10px black;
+    margin-top: 1em;
+    margin-left: 2em;
 }
 
 h1,
@@ -34,4 +38,8 @@ h2 {
 
 ul {
     display: grid;
+}
+
+ul li {
+    margin-left: 2em;
 }
