--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,7 @@ header {
 
 header img {
     box-shadow: 2px 2px 10px black;
-    margin-top: 1em;
-    margin-left: 2em;
+    margin: 1em -1em -3.5em 1em;
 }
 
 h1,
@@ -34,6 +33,10 @@ h2 {
     display: block;
     text-align: center;
     text-shadow: 2px 2px 10px grey;
+}
+
+h1 {
+    font-size: 60px;
 }
 
 ul {
