--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,52 @@
-/*
+        /*
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }*/
-
-body {
-    height: auto;
-    width: 75%;
-    background-color: white;
-    margin: auto;
-}
-
-p i {
-    color: grey;
-}
-
-header {
-    background-color: lightblue;
-    color: white;
-    border-radius: 5px;
-    margin-top: 1em;
-}
-
-header img {
-    box-shadow: 2px 2px 10px black;
-    margin: 1em -1em -3.5em 1em;
-}
-
-h1,
-h2 {
-    display: block;
-    text-align: center;
-    text-shadow: 2px 2px 10px grey;
-}
-
-h1 {
-    font-size: 60px;
-}
-
-ul {
-    display: grid;
-}
-
-ul li {
-    margin-left: 2em;
-}
+        
+        body {
+            height: auto;
+            width: 75%;
+            background-color: white;
+            margin: auto;
+        }
+        
+        p i {
+            color: grey;
+        }
+        
+        header {
+            background-color: lightblue;
+            color: white;
+            border-radius: 5px;
+            margin-top: 1em;
+        }
+        
+        header img {
+            box-shadow: 2px 2px 10px black;
+            margin: 1em -1em -3.5em 1em;
+        }
+        
+        h1,
+        h2 {
+            display: block;
+            text-shadow: 2px 2px 10px grey;
+        }
+        
+        h1 {
+            font-size: 60px;
+            text-align: center;
+        }
+        
+        h2 {
+            text-align: left;
+        }
+        
+        ul {
+            display: grid;
+        }
+        
+        ul li {
+            margin-left: 2em;
+        }
