--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@
         header img {
             box-shadow: 2px 2px 10px black;
             margin: 1em -1em -4em 1em;
+            position: absolute;
+            left: 0px;
+            top: 0px;
+            z-index: -1;
         }
         
         h1,
