--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,9 @@
             color: white;
             border-radius: 5px;
             margin-top: 1em;
+            margin-bottom: 1em;
+            font-size: 60px;
+            text-align: center;
         }
         
         header img {
@@ -33,11 +36,6 @@
         h2 {
             display: block;
             text-shadow: 2px 2px 10px grey;
-        }
-        
-        h1 {
-            font-size: 60px;
-            text-align: center;
         }
         
         h2 {
