--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,8 @@
             margin-bottom: 1em;
             font-size: 60px;
             text-align: center;
+            padding-top: 1em;
+            padding-bottom: 1em;
         }
         
         header img {
