--- a/css/style.css
+++ b/css/style.css
@@ -1,57 +1,66 @@
-        /*
+            /*
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }*/
-        
-        body {
-            height: auto;
-            width: 75%;
-            background-color: white;
-            margin: auto;
-        }
-        
-        p i {
-            color: grey;
-        }
-        
-        header,
-        footer {
-            background-color: lightblue;
-            color: white;
-            border-radius: 5px;
-            margin-top: 1em;
-            margin-bottom: 1em;
-            font-size: 60px;
-            text-align: center;
-            padding-top: 1em;
-            padding-bottom: 1em;
-        }
-        
-        header img {
-            box-shadow: 2px 2px 10px black;
-            margin: 1em -1em -4em 1em;
-        }
-        
-        h1,
-        h2 {
-            display: block;
-            text-shadow: 2px 2px 10px grey;
-        }
-        
-        h2 {
-            text-align: left;
-        }
-        
-        ul {
-            display: grid;
-        }
-        
-        ul li {
-            margin-left: 2em;
-        }
-        
-        #currentdate {
-            color: yellow;
-        }
+            
+            body {
+                height: auto;
+                width: 75%;
+                background-color: white;
+                margin: auto;
+            }
+            
+            p i {
+                color: grey;
+            }
+            
+            header,
+            footer {
+                background-color: lightblue;
+                color: white;
+                border-radius: 5px;
+                margin-top: 1em;
+                margin-bottom: 1em;
+                font-size: 60px;
+                text-align: center;
+                padding-top: 1em;
+                padding-bottom: 1em;
+            }
+            
+            header img {
+                box-shadow: 2px 2px 10px black;
+                margin: 1em -1em -4em 1em;
+            }
+            
+            h1,
+            h2 {
+                display: block;
+                text-shadow: 2px 2px 10px grey;
+            }
+            
+            h1 {
+                font-size: 60px;
+                text-align: center;
+                width: 75%;
+                float: right;
+                margin: auto;
+                padding: 1em;
+            }
+            
+            h2 {
+                text-align: left;
+            }
+            
+            ul {
+                display: grid;
+            }
+            
+            ul li {
+                margin-left: 2em;
+            }
+            
+            #currentdate {
+                color: yellow;
+            }
