--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@
             header img {
                 box-shadow: 2px 2px 10px black;
                 margin: 1em -1em -4em 1em;
+                float: left;
             }
             
             h1,
