--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@
             
             header img {
                 box-shadow: 2px 2px 10px black;
-                margin: 1em -1em -4em 1em;
+                margin: 1em auto 1em -8em;
                 float: left;
             }
             
