--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
             text-align: center;
             padding-top: 1em;
             padding-bottom: 1em;
-            height: 22.8em;
+            height: auto;
         }
         
         header img {
