--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,8 @@ p i {
     color: grey;
 }
 
-header {
+header,
+footer {
     background-color: lightblue;
     color: white;
     border-radius: 5px;
