--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ footer {
     padding-top: 1em;
     padding-bottom: 1em;
     height: auto;
+    box-shadow: 2px 2px 10px black;
 }
 
 header img {
@@ -67,7 +68,7 @@ h1,
 h2,
 footer p {
     display: block;
-    text-shadow: 2px 2px 10px grey;
+    text-shadow: 2px 2px 10px black;
 }
 
 h1 {
