--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ footer {
     padding-top: 1em;
     padding-bottom: 1em;
     height: auto;
-    box-shadow: 5px 5px black;
+    box-shadow: inset 0px 0px 40px 40px black;
 }
 
 header img {
