--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ footer {
     padding-top: 1em;
     padding-bottom: 1em;
     height: auto;
-    box-shadow: 0px 0px 10px 10px black;
+    box-shadow: 0px 0px 10px 10px grey;
 }
 
 header img {
