--- a/lesson1/css/style.css
+++ b/lesson1/css/style.css
@@ -47,14 +47,11 @@
         
         header,
         footer {
+            display: grid;
             background-color: blue;
             color: white;
             border-radius: 5px;
-            margin-top: 1em;
-            margin-bottom: 2em;
             text-align: center;
-            padding-top: 1em;
-            padding-bottom: 1em;
             height: auto;
             box-shadow: 2px 2px 10px black;
         }
