--- a/lesson1/css/style.css
+++ b/lesson1/css/style.css
@@ -54,6 +54,7 @@
             text-align: center;
             height: auto;
             box-shadow: 2px 2px 10px black;
+            padding: 1em;
         }
         
         header img {
