--- a/lesson1/css/style.css
+++ b/lesson1/css/style.css
@@ -1,110 +1,97 @@
-        @font-face {
-            font-family: 'Open Sans';
-            font-style: normal;
-            font-weight: 400;
-            font-stretch: normal;
-            font-display: swap;
-            src: url(https://fonts.gstatic.com/s/opensans/v28/memSYaGs126MiZpBA-UvWbX2vVnXBbObj2OVZyOOSr4dVJWUgsjZ0C4n.ttf) format('truetype');
-        }
-        
-        @font-face {
-            font-family: 'PT Sans';
-            font-style: normal;
-            font-weight: 400;
-            font-display: swap;
-            src: url(https://fonts.gstatic.com/s/ptsans/v16/jizaRExUiTo99u79P0U.ttf) format('truetype');
-        }
-        
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        
-        h1,
-        h2 {
-            font-family: 'Open Sans', sans-serif;
-        }
-        
-        p {
-            font-family: 'PT Sans', sans-serif;
-        }
-        
-        body {
-            height: auto;
-            width: 50%;
-            background-color: white;
-            margin: auto;
-        }
-        
-        p i {
-            color: grey;
-        }
-        
-        header {
-            height: 22.8em;
-        }
-        
-        header,
-        footer {
-            display: grid;
-            background-color: blue;
-            color: white;
-            border-radius: 5px;
-            text-align: center;
-            height: auto;
-            box-shadow: 2px 2px 10px black;
-            padding: 1em;
-        }
-        
-        header img {
-            box-shadow: 2px 2px 10px black;
-            margin: 1em auto 1em -8em;
-            margin-left: -10px;
-        }
-        
-        h1,
-        h2 {
-            display: block;
-            text-shadow: 3px 1px 5px black;
-            font-size: 2.5rem;
-            margin: 0.51rem;
-        }
-        
-        footer p {
-            display: block;
-            text-shadow: 2px 3px 4px black;
-        }
-        
-        footer {
-            margin: 1em;
-        }
-        
-        h1 {
-            text-align: center;
-            width: 50%;
-            float: right;
-            margin: auto;
-            margin-top: 5em;
-            margin-right: 2em;
-        }
-        
-        h2 {
-            text-align: left;
-        }
-        
-        ul {
-            display: grid;
-        }
-        
-        ul li {
-            margin-left: 2em;
-        }
-        
-        ul li p {
-            font-weight: bold;
-        }
-        
-        #date {
-            color: yellow;
-        }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+h1,
+h2 {
+    font-family: 'Open Sans', sans-serif;
+}
+
+p {
+    font-family: 'PT Sans', sans-serif;
+}
+
+body {
+    height: auto;
+    width: 50%;
+    background-color: white;
+    margin: auto;
+}
+
+p i {
+    color: grey;
+}
+
+header {
+    height: 22.8em;
+}
+
+header,
+footer {
+    display: grid;
+    background-color: blue;
+    color: white;
+    border-radius: 5px;
+    text-align: center;
+    height: auto;
+    box-shadow: 2px 2px 10px black;
+    padding: 1em;
+}
+
+header img {
+    box-shadow: 2px 2px 10px black;
+    margin: 1em auto 1em -8em;
+    margin-left: -10px;
+}
+
+h1,
+h2 {
+    display: block;
+    text-shadow: 3px 1px 5px black;
+    font-size: 2.5rem;
+    margin: 0.51rem;
+}
+
+footer p {
+    display: block;
+    text-shadow: 2px 3px 4px black;
+}
+
+footer {
+    margin: 1em;
+}
+
+h1 {
+    text-align: center;
+    width: 50%;
+    float: right;
+    margin: auto;
+    margin-top: 5em;
+    margin-right: 2em;
+}
+
+h2 {
+    text-align: left;
+}
+
+ul {
+    display: grid;
+}
+
+ul li {
+    margin-left: 2em;
+}
+
+ul li p {
+    font-weight: bold;
+}
+
+#date {
+    color: yellow;
+}
+
+hr {
+    margin-top: 1em;
+}
