--- a/lesson1/css/medium.css
+++ b/lesson1/css/medium.css
@@ -1,7 +1,19 @@
-@media (min-width: 32.5em) h1 {
-    color: red;
-}
-
-h2 {
-    color: green;
-}
+    @media only screen and (min-width: 32.5em) {
+        h1 {
+            font-size: 2.5rem;
+        }
+        h2 {
+            font-size: 1.5rem;
+        }
+        header,
+        footer {
+            border-radius: 10px;
+        }
+        header img {
+            width: 200px;
+            height: auto;
+            box-shadow: 0 0 30px #444;
+            float: center;
+            border-radius: 0 10px 0 0;
+        }
+    }
