--- a/lesson1/css/small.css
+++ b/lesson1/css/small.css
@@ -1,7 +1,18 @@
+:root {
+    --Primary_color: #061C8C;
+    --Secondary_color: #48ACF0;
+    --Accent1: #FEF9FF;
+    --Accent2: #F4E04D;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+html {
+    background-color: var(--Accent2);
 }
 
 h1,
@@ -18,46 +29,42 @@ body {
     width: 50%;
     background-color: white;
     margin: auto;
+    padding: 1em;
 }
 
 p i {
     color: grey;
 }
 
-header {
-    height: 22.8em;
-}
-
 header,
 footer {
     display: grid;
-    background-color: blue;
-    color: white;
+    background-color: var(--Primary_color);
+    color: var(--Accent1);
     border-radius: 5px;
     text-align: center;
     height: auto;
-    box-shadow: 2px 2px 10px black;
+    box-shadow: 2px 2px 10px var(--Secondary_color);
     padding: 1em;
     margin: 1em;
 }
 
 header img {
-    box-shadow: 2px 2px 10px black;
-    margin: 1em auto 1em -8em;
-    margin-left: -10px;
+    width: 200px;
+    height: auto;
 }
 
 h1,
 h2 {
     display: block;
-    text-shadow: 3px 1px 5px black;
+    text-shadow: 3px 1px 5px var(--Secondary_color);
     font-size: 2.5rem;
     margin: 0.51rem;
 }
 
 footer p {
     display: block;
-    text-shadow: 2px 3px 4px black;
+    text-shadow: 2px 3px 4px var(--Secondary_color);
 }
 
 h1 {
