--- a/lesson1/css/small.css
+++ b/lesson1/css/small.css
@@ -1,8 +1,8 @@
 :root {
-    --Primary_color: #061C8C;
-    --Secondary_color: #32A287;
+    --Primary_color: #284AF6;
+    --Secondary_color: #92DDCC;
     --Accent1: #FEF9FF;
-    --Accent2: #F4E04D;
+    --Accent2: #F6E879;
 }
 
 * {
@@ -86,6 +86,14 @@ ul {
 
 ul li {
     margin-left: 2em;
+    margin: 0.5rem;
+    border: 1px solid var(--Secondary_color);
+    padding: 0 1rem;
+    background-color: var(--Secondary_color);
+    padding: 0.25rem;
+    border-radius: 5px;
+    font-size: 0.8rem;
+    border-radius: 5px;
 }
 
 ul li p {
