--- a/lesson2/css/large.css
+++ b/lesson2/css/large.css
@@ -1,8 +1,8 @@
 :root {
-    --Primary_color: #061C8C;
-    --Secondary_color: #32A287;
+    --Primary_color: #284AF6;
+    --Secondary_color: #92DDCC;
     --Accent1: #FEF9FF;
-    --Accent2: #F4E04D;
+    --Accent2: #F6E879;
 }
 
 * {
@@ -30,10 +30,6 @@ body {
     background-color: var(--Accent1);
     margin: auto;
     padding: 1em;
-}
-
-p i {
-    color: grey;
 }
 
 header,
@@ -80,16 +76,27 @@ h2 {
     text-align: left;
 }
 
-ul {
+main {
     display: grid;
+    grid-template-columns: 1fr;
 }
 
-ul li {
-    margin-left: 2em;
+main div {
+    margin: 0 auto;
+    border: 1px solid var(--Secondary_color);
+    padding: 0 1rem;
+    background-color: var(--Secondary_color);
+    font-size: 0.8rem;
+    border-radius: 5px;
 }
 
-ul li p {
-    font-weight: bold;
+main div:nth-child(2) {
+    display: none;
+    margin: 0.5rem;
+}
+
+main div img {
+    box-shadow: 0 0 30px var(--Secondary_color)
 }
 
 #date {
