--- a/lesson1/css/small.css
+++ b/lesson1/css/small.css
@@ -2,7 +2,7 @@
     --Primary_color: #284AF6;
     --Secondary_color: #92DDCC;
     --Accent1: #FEF9FF;
-    --Accent2: #F6E879;
+    --Accent2: #dddfef;
 }
 
 * {
