--- a/lesson2/css/large.css
+++ b/lesson2/css/large.css
@@ -2,7 +2,7 @@
     --Primary_color: #284AF6;
     --Secondary_color: #92DDCC;
     --Accent1: #FEF9FF;
-    --Accent2: #F6E879;
+    --Accent2: #dddfef;
 }
 
 * {
@@ -79,6 +79,7 @@ h2 {
 main {
     display: grid;
     grid-template-columns: 1fr;
+    grid-gap: 1em;
 }
 
 main div {
@@ -105,4 +106,8 @@ main div img {
 
 hr {
     margin: 1em;
+}
+
+ul li {
+    padding: 2em;
 }
