--- a/lesson2/css/large.css
+++ b/lesson2/css/large.css
@@ -40,7 +40,6 @@ footer {
     border-radius: 5px;
     text-align: center;
     height: auto;
-    box-shadow: 2px 2px 10px var(--Secondary_color);
     padding: 1em;
     margin: 1em;
 }
@@ -60,7 +59,6 @@ h2 {
 
 footer p {
     display: block;
-    text-shadow: 2px 3px 4px var(--Secondary_color);
 }
 
 h1 {
@@ -94,23 +92,11 @@ main div {
 
 
 /*main div:nth-child(2) {
-    margin: 0.5rem;
+margin: 0.5rem;
 }*/
 
 main div img {
     box-shadow: 0 0 30px var(--Secondary_color)
-}
-
-#date {
-    color: var(--Accent2);
-}
-
-hr {
-    margin: 1em;
-}
-
-ul li {
-    padding: 2em;
 }
 
 .grid {
@@ -120,14 +106,28 @@ ul li {
     padding: 1em;
 }
 
+.grid h3 {
+    font-size: 18px;
+    padding-bottom: 0.5em;
+}
+
 .grid img {
     width: 190px;
     float: left;
     padding: 1em;
 }
 
-button {
-    float: center;
+nav ul li {
+    list-style: none;
+    background-color: var(--Accent2);
+}
+
+nav button {
+    background-color: var(--Primary_color);
     padding: 0.5em;
-    margin-top: 1em;
+    margin: 0.5em;
+}
+
+nav button a {
+    color: var(--Accent1);
 }
