--- a/lesson2/css/medium.css
+++ b/lesson2/css/medium.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 35em) {
+@media screen and (min-width: 780px) {
      :root {
         --Primary_color: #284AF6;
         --Secondary_color: #92DDCC;
