--- a/lesson2/css/large.css
+++ b/lesson2/css/large.css
@@ -22,7 +22,7 @@
     }
     main {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 1em;
     }
     main div {
