--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -62,7 +62,7 @@ h2 {
 
 main {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-gap: 1em;
 }
 
