--- a/lesson3/css/large.css
+++ b/lesson3/css/large.css
@@ -17,11 +17,11 @@ html {
 
 h1,
 h2 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: Sansita, Ubuntu, and sans-serif;
 }
 
 p {
-    font-family: 'PT Sans', sans-serif;
+    font-family: Sansita, Ubuntu, and sans-serif;
 }
 
 body {
