--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -15,3 +15,10 @@
         float: center;
     }
 }
+
+.grid {
+    display: grid;
+    grid-template-columns: 0.5fr 0.5fr;
+    grid-template-rows: 0.5fr 0.5fr;
+    align-items: center;
+}
