--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -80,11 +80,52 @@ section {
     display: flex;
 }
 
-nav {
-    background-color: var(--Accent2);
+nav a {
+    color: nav(--Accent1);
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 0.5fr 1fr 0.5fr;
+    grid-template-rows: 0.5fr 0.5fr 0.5fr;
+    align-items: center;
 }
 
 div {
-    display: grid;
-    border: 1px solid black;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.event {
+    grid-column: 1;
+    grid-row: 1;
+    height: 300px;
+}
+
+.weather {
+    grid-column: 1;
+    grid-row: 2;
+    height: 300px;
+}
+
+.join {
+    grid-column: 1;
+    grid-row: 3;
+    height: 300px;
+}
+
+.hero {
+    grid-column: 2/4;
+    grid-row: 1/3;
+    height: 600px;
+}
+
+.news {
+    grid-column: 2/3;
+    height: 300px;
+}
+
+.spotlight {
+    grid-column: 3;
+    grid-row: 1;
+    height: 900px;
 }
