--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -12,7 +12,11 @@
 }
 
 html {
-    background-color: var(--Accent2);
+    background-color: var(--Accent1);
+}
+
+.logo {
+    font-size: 12px;
 }
 
 h1,
@@ -26,9 +30,8 @@ p {
 
 body {
     height: auto;
-    background-color: var(--Accent1);
     margin: auto;
-    padding: 2em;
+    padding: 1em;
 }
 
 header,
@@ -84,11 +87,19 @@ nav a {
     color: nav(--Accent1);
 }
 
+.icons ul li {
+    float: right;
+}
+
 .grid {
     display: grid;
-    grid-template-columns: 0.5fr 1fr 0.5fr;
-    grid-template-rows: 0.5fr 0.5fr 0.5fr;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto;
     align-items: center;
+    background-color: var(--Accent1);
+    margin: 0;
+    padding: 2em;
+    grid-gap: 5px;
 }
 
 div {
@@ -114,13 +125,14 @@ div {
 }
 
 .hero {
-    grid-column: 2/4;
-    grid-row: 1/3;
+    grid-column: 2/3;
+    grid-row: 1/2;
     height: 600px;
 }
 
 .news {
     grid-column: 2/3;
+    grid-row: 3;
     height: 300px;
 }
 
@@ -128,4 +140,17 @@ div {
     grid-column: 3;
     grid-row: 1;
     height: 900px;
+}
+
+.spotlight ul li {
+    display: block;
+    border: 1px dotted black;
+}
+
+.icons {
+    float: right;
+}
+
+.icons li img {
+    width: 30px;
 }
