--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -193,3 +193,12 @@ div {
     padding: 0px;
     margin: 0px;
 }
+
+footer a {
+    color: white;
+    text-decoration: none;
+}
+
+#map {
+    width: 20px;
+}
