--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,204 +1,168 @@
-:root {
-    --Primary_color: #153158;
-    --Secondary_color: #85C6E2;
-    --Accent1: #FFFFFF;
-    --Accent2: #C2C2C2;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html {
-    background-color: var(--Accent1);
-}
-
-.logo {
-    height: 100px;
-    width: auto;
-    background-color: transparent;
-    margin-left: -1em;
-    margin-top: -1em;
-    margin-bottom: -1em;
-}
-
-.logo img {
-    float: left;
-}
-
-.logo h1,
-footer h1 {
-    font-size: 15px;
-}
-
-.logo p {
-    font-size: 10px;
-}
-
-.logo ul li {
-    display: block;
-    margin-top: -3em;
-}
-
-h1,
-h2,
-p {
-    font-family: Sansita, Ubuntu, and sans-serif;
-}
-
-body {
-    height: auto;
-    margin: auto;
-    padding: 1em;
-}
-
-header,
-footer {
-    display: flex;
-    background-color: var(--Primary_color);
-    color: var(--Accent1);
-    border-radius: 5px;
-    text-align: center;
-    height: auto;
-    padding: 1em;
-    margin: 1em;
-}
-
-header img,
-img {
-    width: 100px;
-    height: auto;
-}
-
-header ul {
-    display: inline;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-header ul li {
-    float: left;
-}
-
-header nav {
-    margin-left: 20em;
-    text-decoration: none;
-}
-
-header ul li a {
-    display: block;
-}
-
-ul {
-    display: grid;
-}
-
-ul li {
-    list-style-type: none;
-}
-
-#currentdate {
-    color: var(--Accent1);
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 0.25em;
-    width: 100%;
-    float: left;
-    margin-left: -15em;
-}
-
-nav ul li {
-    align-items: center;
-}
-
-nav a {
-    color: nav(--Accent1);
-    padding: 1em;
-}
-
-.icons ul li {
-    float: right;
-}
-
-.grid {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto auto;
-    align-items: center;
-    background-color: var(--Accent1);
-    margin: 0;
-    padding: 2em;
-    grid-gap: 10px;
-}
-
-div {
-    background-color: rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    padding: 1em;
-}
-
-.event {
-    grid-column: 1;
-    grid-row: 1;
-    height: 20em;
-}
-
-.weather {
-    grid-column: 1;
-    grid-row: 2;
-    height: 20em;
-}
-
-.join {
-    grid-column: 1;
-    grid-row: 3;
-    height: 20em;
-}
-
-.hero {
-    grid-column: 2/3;
-    grid-row: 1/2;
-    height: 40em;
-}
-
-.news {
-    grid-column: 2/3;
-    grid-row: 3;
-    height: 20em;
-}
-
-.spotlight {
-    grid-column: 3;
-    grid-row: 1;
-    height: 0em;
-}
-
-.spotlight ul li {
-    display: block;
-    border: 1px dotted black;
-}
-
-.icons {
-    float: right;
-    margin-left: 25em;
-}
-
-.icons li img {
-    width: 30px;
-}
-
-.icons li {
-    padding: 0px;
-    margin: 0px;
-}
-
-footer a {
-    color: white;
-    text-decoration: none;
-}
-
-#map {
-    width: 20px;
-}
+    @media only screen and (min-width: 64em) {
+         :root {
+            --Primary_color: #153158;
+            --Secondary_color: #85C6E2;
+            --Accent1: #FFFFFF;
+            --Accent2: #C2C2C2;
+        }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        html {
+            background-color: var(--Accent1);
+        }
+        .logo {
+            height: 100px;
+            width: auto;
+            background-color: transparent;
+            margin-left: -1em;
+            margin-top: -1em;
+            margin-bottom: -1em;
+        }
+        .logo img {
+            float: left;
+        }
+        .logo h1,
+        footer h1 {
+            font-size: 15px;
+        }
+        .logo p {
+            font-size: 10px;
+        }
+        .logo ul li {
+            display: block;
+            margin-top: -3em;
+        }
+        h1,
+        h2,
+        p {
+            font-family: Sansita, Ubuntu, and sans-serif;
+        }
+        body {
+            height: auto;
+            margin: auto;
+            padding: 1em;
+        }
+        header,
+        footer {
+            display: flex;
+            background-color: var(--Primary_color);
+            color: var(--Accent1);
+            border-radius: 5px;
+            text-align: center;
+            height: auto;
+            padding: 1em;
+            margin: 1em;
+        }
+        header img,
+        img {
+            width: 100px;
+            height: auto;
+        }
+        header ul {
+            display: inline;
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+        header ul li {
+            float: left;
+        }
+        header nav {
+            text-decoration: none;
+        }
+        header ul li a {
+            display: block;
+        }
+        ul {
+            display: grid;
+        }
+        ul li {
+            list-style-type: none;
+        }
+        #currentdate {
+            color: var(--Accent1);
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 0.25em;
+            padding-left: 15em;
+            padding-right: 15em;
+        }
+        nav a {
+            color: nav(--Accent1);
+            padding: 1em;
+        }
+        nav button {
+            display: none;
+        }
+        .icons ul li {
+            float: right;
+        }
+        .grid {
+            display: grid;
+            grid-template-columns: auto auto auto;
+            grid-template-rows: auto auto auto;
+            align-items: center;
+            background-color: var(--Accent1);
+            margin: 0;
+            padding: 2em;
+            grid-gap: 10px;
+        }
+        div {
+            background-color: rgba(0, 0, 0, 0.2);
+            border-radius: 5px;
+            padding: 1em;
+        }
+        .event {
+            grid-column: 1;
+            grid-row: 1;
+            height: 20em;
+        }
+        .weather {
+            grid-column: 1;
+            grid-row: 2;
+            height: 20em;
+        }
+        .join {
+            grid-column: 1;
+            grid-row: 3;
+            height: 20em;
+        }
+        .hero {
+            grid-column: 2/3;
+            grid-row: 1/2;
+            height: 40em;
+        }
+        .news {
+            grid-column: 2/3;
+            grid-row: 3;
+            height: 20em;
+        }
+        .spotlight {
+            grid-column: 3;
+            grid-row: 1;
+            height: 0em;
+        }
+        .spotlight ul li {
+            display: block;
+            border: 1px dotted black;
+        }
+        .icons {
+            float: right;
+        }
+        .icons li img {
+            width: 30px;
+        }
+        .icons li {
+            padding: 0px;
+            margin: 0px;
+        }
+        footer a {
+            color: white;
+            text-decoration: none;
+        }
+        #map {
+            width: 20px;
+        }
+    }
