--- a/css/medium.css
+++ b/css/medium.css
@@ -13,6 +13,6 @@
             width: 200px;
             height: auto;
             float: center;
-            border-radius: 5px;
+            border-radius: 50%;
         }
     }
