--- a/lesson2/css/large.css
+++ b/lesson2/css/large.css
@@ -1,9 +1,9 @@
 @media screen and (min-width: 64em) {
      :root {
-        --Primary_color: #284AF6;
-        --Secondary_color: #92DDCC;
-        --Accent1: #FEF9FF;
-        --Accent2: #dddfef;
+        --Primary_color: #153158;
+        --Secondary_color: #85C6E2;
+        --Accent1: #FFFFFF;
+        --Accent2: #C2C2C2;
     }
     h1 {
         font-size: 2.5rem;
