--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -108,42 +108,48 @@
         .grid {
             display: grid;
             width: auto;
-            height: 100%;
-            grid-template-columns: auto auto auto;
-            grid-template-rows: auto auto auto;
+            height: 900px;
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: repeat(3, 1fr);
             align-items: center;
             background-color: var(--Accent1);
             padding: 0;
-            grid-gap: 10px;
+            margin: 0;
         }
         div {
             background-color: rgba(0, 0, 0, 0.2);
             border-radius: 5px;
-            height: 100%;
+            border: 1px solid black;
         }
         .event {
-            grid-column: 1;
-            grid-row: 1;
+            grid-column: 1/2;
+            grid-row: 1/2;
+            height: 300px;
         }
         .weather {
-            grid-column: 1;
-            grid-row: 2;
+            grid-column: 1/2;
+            grid-row: 2/3;
+            height: 300px;
         }
         .join {
-            grid-column: 1;
-            grid-row: 3;
+            grid-column: 1/2;
+            grid-row: 3/4;
+            height: 300px;
         }
         .hero {
-            grid-column: 2;
-            grid-row: 1 span 2;
+            grid-column: 2/4;
+            grid-row: 1/3;
+            height: 600px;
         }
         .news {
-            grid-column: 2/3;
-            grid-row: 3;
+            grid-column: 2/4;
+            grid-row: 3/4;
+            height: 300px;
         }
         div.spotlight {
-            grid-column: 3;
-            grid-row: 1 span 3;
+            grid-column: 4;
+            grid-row: 1/3;
+            height: 900px;
         }
         div.spotlight ul li {
             display: block;
