--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -87,6 +87,8 @@ nav button {
     display: block;
 }
 
+
+/* 
 .grid {
     display: grid;
     height: auto;
@@ -96,15 +98,18 @@ nav button {
     margin: 0;
     padding: 2em;
     grid-gap: 10px;
-}
+} */
 
-.grid div {
+
+/* .grid div {
     background-color: var(--Accent2);
     padding: 1em;
+    grid-template-columns: 1fr;
     text-align: center;
-}
+} */
 
-.event {
+
+/* .event {
     height: 20em;
 }
 
@@ -132,7 +137,7 @@ nav button {
     border: 1px solid black;
     height: 17em;
     margin: 1em;
-}
+} */
 
 #hamburgerBtn span:nth-child(1) {
     display: block;
