--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -9,10 +9,10 @@
     footer {
         border-radius: 10px;
     }
-    log-img {
+    /* log-img {
         width: 100%;
         float: center;
-    }
+    } */
     /* .grid {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
