--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -13,17 +13,10 @@
     html {
         background-color: var(--Accent1);
     }
-    .logo {
-        height: 100px;
-        width: auto;
-        background-color: transparent;
-        margin-left: -1em;
-        margin-top: -1em;
-        margin-bottom: -1em;
-    }
     .logo-img {
         float: left;
-        width: 200px;
+        width: 150px;
+        height: auto;
     }
     .logo h1,
     footer h1 {
@@ -50,23 +43,17 @@
     header,
     footer {
         width: auto;
-        display: flex;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
         background-color: var(--Primary_color);
         color: var(--Accent1);
         border-radius: 5px;
         text-align: center;
-        height: 10em;
-        padding: 1em;
     }
-    header img,
-    img {
-        width: auto;
-        height: 8em;
-    }
-    header img {
+    /* header img {
         margin-top: 1em;
         margin-left: 1em;
-    }
+    } */
     header ul {
         display: inline;
         list-style-type: none;
@@ -106,7 +93,7 @@
     .grid {
         display: grid;
         width: auto;
-        height: 900px;
+        /* height: 900px; */
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(3, 1fr);
         align-items: center;
@@ -114,7 +101,7 @@
         padding: 0;
         margin: 0;
     }
-    div {
+    .grid div {
         background-color: rgba(0, 0, 0, 0.2);
         border-radius: 5px;
         border: 1px solid black;
@@ -122,32 +109,32 @@
     .event {
         grid-column: 1/2;
         grid-row: 1/2;
-        height: 300px;
+        height: 100px;
     }
     .weather {
         grid-column: 1/2;
         grid-row: 2/3;
-        height: 300px;
+        height: 100px;
     }
     .join {
         grid-column: 1/2;
         grid-row: 3/4;
-        height: 300px;
+        height: 100px;
     }
     .hero {
         grid-column: 2/4;
         grid-row: 1/3;
-        height: 600px;
+        height: 200px;
     }
     .news {
         grid-column: 2/4;
         grid-row: 3/4;
-        height: 300px;
+        height: 100px;
     }
     div.spotlight {
         grid-column: 4;
         grid-row: 1/3;
-        height: 900px;
+        height: 300px;
     }
     div.spotlight ul li {
         display: block;
